Fix list spacing problem and change component's display to inline-flex

--- a/src/components/RoundList/styles/main.scss
+++ b/src/components/RoundList/styles/main.scss
@@ -1,6 +1,10 @@
 .round-list {
-  width: 163px;
+  width: auto;
   height: 32px;
+  margin: 0;
+  padding: 0;
+  border-radius: 14px;
   background-color: #EBEBEB;
   box-shadow: 0 1 5px rgba(0, 0, 0, .5);
+  display: inline-flex;
 }
